; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/acpica/extr_acpi_smbat.c_acpi_smbat_info_expired.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/acpica/extr_acpi_smbat.c_acpi_smbat_info_expired.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timespec = type { i64 }

@smbat = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.timespec*)* @acpi_smbat_info_expired to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @acpi_smbat_info_expired(%struct.timespec* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.timespec*, align 8
  %4 = alloca %struct.timespec, align 8
  store %struct.timespec* %0, %struct.timespec** %3, align 8
  %5 = load i32, i32* @smbat, align 4
  %6 = call i32 @ACPI_SERIAL_ASSERT(i32 %5)
  %7 = load %struct.timespec*, %struct.timespec** %3, align 8
  %8 = icmp eq %struct.timespec* %7, null
  br i1 %8, label %9, label %11

9:                                                ; preds = %1
  %10 = load i32, i32* @TRUE, align 4
  store i32 %10, i32* %2, align 4
  br label %32

11:                                               ; preds = %1
  %12 = load %struct.timespec*, %struct.timespec** %3, align 8
  %13 = call i32 @timespecisset(%struct.timespec* %12)
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %17, label %15

15:                                               ; preds = %11
  %16 = load i32, i32* @TRUE, align 4
  store i32 %16, i32* %2, align 4
  br label %32

17:                                               ; preds = %11
  %18 = call i32 @getnanotime(%struct.timespec* %4)
  %19 = load %struct.timespec*, %struct.timespec** %3, align 8
  %20 = call i32 @timespecsub(%struct.timespec* %4, %struct.timespec* %19, %struct.timespec* %4)
  %21 = getelementptr inbounds %struct.timespec, %struct.timespec* %4, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = icmp slt i64 %22, 0
  br i1 %23, label %29, label %24

24:                                               ; preds = %17
  %25 = getelementptr inbounds %struct.timespec, %struct.timespec* %4, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = call i64 (...) @acpi_battery_get_info_expire()
  %28 = icmp sgt i64 %26, %27
  br label %29

29:                                               ; preds = %24, %17
  %30 = phi i1 [ true, %17 ], [ %28, %24 ]
  %31 = zext i1 %30 to i32
  store i32 %31, i32* %2, align 4
  br label %32

32:                                               ; preds = %29, %15, %9
  %33 = load i32, i32* %2, align 4
  ret i32 %33
}

declare dso_local i32 @ACPI_SERIAL_ASSERT(i32) #1

declare dso_local i32 @timespecisset(%struct.timespec*) #1

declare dso_local i32 @getnanotime(%struct.timespec*) #1

declare dso_local i32 @timespecsub(%struct.timespec*, %struct.timespec*, %struct.timespec*) #1

declare dso_local i64 @acpi_battery_get_info_expire(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
